<resources>
    <string name="app_name">Money Truth</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="home_goal_label">Your Financial Goal</string>
    <string name="home_saving_type_label">Saving Goal</string>
    <string name="home_year_type_label">Years to achieve Goal</string>
    <string name="home_total_type_label">Total Money saved</string>
    <string name="home_total_current_money_label">Current Balance</string>


    <string name="btn_transfer">Transfer</string>
    <string name="btn_deposit">Deposit</string>
    <string name="btn_withdraw">Withdraw</string>
    <string name="home_piggi_label">Piggy Bank</string>

    <string name="home_bank_label">Saving Account</string>

    <string name="home_rate_of_inflation">Rate of Inflation</string>
    <string name="home_piggi_current_balance">Current Balance</string>
    <string name="home_piggi_future">Future Value</string>

    <string name="home_bank_interest_label">Interest Rate</string>
    <string name="home_bank_current_balance">Current Balance</string>
    <string name="home_bank_future">Future Value</string>


    <string name="setting_goal_title">Select Your Goal</string>
    <string name="setting_ui_title">UI Setting</string>
    <string name="setting_history_title">History</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


    <string name="ui_bg_label">Background Color</string>
    <string name="ui_piggi_label">Piggy Bank Background Color</string>
    <string name="ui_saving_label">Saving Bank Background Color</string>
    <string name="ui_btn_label">App Buttons Background Color</string>
    <string name="ui_save_btn_label">Save Changes</string>
    <string name="save_change_sucess">Saved</string>


    <string name="goal_select_label">Select Your Goal</string>
    <string name="goal_balance_label">Ending Balance(in $)</string>
    <string name="goal_interest_rate_label">Interest rate (% Yearly)</string>
    <string name="goal_no_of_years_label">Number of years</string>
    <string name="goal_set_btn_label">Save Goal</string>


    <string name="goal_select_error_msg">Please select any goal</string>
    <string name="goal_amount_error_msg">Please enter your goal amount</string>
    <string name="goal_interest_error_msg">Please enter valid interest rate</string>

    <string name="goal_save_sucess">Goal Saved Successfully</string>




    <string name="goal_one">Save for a House</string>
    <string name="goal_two">Save for College</string>
    <string name="goal_three">Save for a Car</string>
    <string name="goal_four">Save for Vacation</string>
    <string name="goal_five">Retire Early</string>
    <string name="goal_six">Go Shopping</string>

    <string name="goal_money_hint">Eg. 124.56</string>
    <string name="goal_interest_hint">12.00</string>


    <string name="no_goal_selected_error">No Goal Selected</string>
    <string name="no_amount_error">Please enter amount</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="insufficient_balance_error">Insufficient balance</string>


    <string name="transfer_dialog_title">Transfer</string>
    <string name="transfer_dialog_msg">Please enter amount</string>
    <string name="transfer_dialog_piggi_to">Piggy Bank to Saving Account</string>
    <string name="transfer_dialog_bank_to">Saving Account to Piggy Bank</string>
    <string name="transfer_dialog_cancel">Cancel</string>



    <string name="withdraw_dialog_title">Withdraw</string>
    <string name="withdraw_dialog_msg">Please enter amount</string>
    <string name="withdraw_dialog_piggi">From Piggy Bank</string>
    <string name="withdraw_dialog_bank">From Saving Account</string>
    <string name="withdraw_dialog_cancel">Cancel</string>


    <string name="deposit_dialog_title">Deposit</string>
    <string name="deposit_dialog_msg">Please enter amount</string>
    <string name="deposit_dialog_piggi">To Piggy Bank</string>
    <string name="deposit_dialog_bank">To Saving Account</string>
    <string name="deposit_dialog_cancel">Cancel</string>


    <string name="year_label">Years</string>
</resources>
